[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
dashmap = "6.1.0"
thiserror = "2"
serde = { version = "1.0.215", features = ["derive"] }
static_assertions = "1.1.0"


[build-dependencies]
tonic-build = "0.12"